# rusty-jvm

./: .gitignore  Cargo.toml  README.md
resources/test/: AddFieldInteger.java  AddLdc.java  FieldHaver.java  MyI.java  TestMathSin.java
resources/test/jar/: Bar.java  Foo.java
runtime/: Cargo.toml
runtime/src/: constant_pool.rs  interp_stack.rs  klass_parser.rs  klass_repo.rs  lib.rs  native_methods.rs  object.rs  otfield.rs  otklass.rs  otmethod.rs  simple_heap.rs  tests.rs
src/: lib.rs  loop.txt  main.rs  opcode.rs  options.rs  tests.rs
util/: Cargo.toml
util/src/: lib.rs
